--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "webonyx/graphql-php": "^14.0"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.19"
     },
     "config": {
         "optimize-autoloader": true,
