Add bunch of stuff

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,10 @@
 /vendor/
 ###< symfony/framework-bundle ###
 .idea
+.php_cs.cache
+
+###> symfony/phpunit-bridge ###
+.phpunit
+.phpunit.result.cache
+/phpunit.xml
+###< symfony/phpunit-bridge ###
