--- a/.ddev/config.yaml
+++ b/.ddev/config.yaml
@@ -9,7 +9,7 @@ router_https_port: "443"
 xdebug_enabled: false
 additional_hostnames: []
 additional_fqdns: []
-nfs_mount_enabled: false
+nfs_mount_enabled: true
 provider: default
 use_dns_when_possible: true
 timezone: ""
