--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,4 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+index:
+    path: /
+    host: "://sheetmusic-api.ddev.site/"
+    controller: App\Controller\DefaultController::index
