--- a/.env
+++ b/.env
@@ -13,6 +13,9 @@
 # Run "composer dump-env prod" to compile .env files for production use (requires symfony/flex >=1.2).
 # https://symfony.com/doc/current/best_practices.html#use-environment-variables-for-infrastructure-configuration
 
+#APP_URL=https://api.sheetmusic-api.ddev.site
+#APP_URL_FE=https://sheetmusic-api.ddev.site
+
 ###> symfony/framework-bundle ###
 APP_ENV=dev
 APP_SECRET=8ca4fe8c9a37962c045aa246faa7f54a
