--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,4 +1,4 @@
-index:
-    path: /
-    host: "://sheetmusic-api.ddev.site/"
-    controller: App\Controller\DefaultController::index
+#index:
+#    path: /
+#    host: "://sheetmusic-api.ddev.site/"
+#    controller: App\Controller\DefaultController::index
