--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,6 +4,8 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
+    app.url: '%env(APP_URL)%'
+    app.url_fe: '%env(APP_URL_FE)%'
 
 services:
     # default configuration for services in *this* file
